--- a/package.json
+++ b/package.json
@@ -17,11 +17,15 @@
   "dependencies": {
     "@line/bot-sdk": "^7.5.0",
     "dotenv": "^16.0.0",
-    "express": "^4.17.3"
+    "express": "^4.17.3",
+    "node-fetch": "^2.6.6",
+    "request": "^2.88.2"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
     "@types/node": "^17.0.23",
+    "@types/node-fetch": "^2.6.1",
+    "@types/request": "^2.48.8",
     "npm-run-all": "^4.1.5",
     "rimraf": "^3.0.2",
     "ts-node": "^10.7.0",
