--- a/package.json
+++ b/package.json
@@ -16,9 +16,10 @@
   "license": "ISC",
   "dependencies": {
     "@line/bot-sdk": "^7.5.0",
+    "axios": "^0.27.2",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
-    "node-fetch": "^2.6.6",
+    "node-fetch": "^2.6.7",
     "request": "^2.88.2"
   },
   "devDependencies": {
